--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "~11.1.2",
     "@angular/router": "~11.1.2",
     "@types/jquery": "^3.5.5",
+    "angularx-qrcode": "^11.0.0",
     "bootstrap": "^4.6.0",
     "cors": "^2.8.5",
     "enhanced-resolve": "^3.4.1",
